--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,4 @@ importFrom(ghql,GraphqlClient)
 importFrom(httr,add_headers)
 importFrom(jsonlite,fromJSON)
 importFrom(magrittr,"%>%")
+importFrom(tibble,tibble)
