add text-search skeleton

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,12 @@ importFrom(ghql,GraphqlClient)
 importFrom(httr,add_headers)
 importFrom(jsonlite,fromJSON)
 importFrom(magrittr,"%>%")
+importFrom(quanteda,char_tolower)
+importFrom(quanteda,dfm)
+importFrom(quanteda,featnames)
+importFrom(quanteda,kwic)
+importFrom(quanteda,stopwords)
+importFrom(quanteda,tokens)
+importFrom(quanteda,tokens_wordstem)
 importFrom(tibble,tibble)
+importFrom(utils,combn)
