it works :star2::star::star2:

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,4 +13,5 @@ importFrom(quanteda,stopwords)
 importFrom(quanteda,tokens)
 importFrom(quanteda,tokens_wordstem)
 importFrom(tibble,tibble)
+importFrom(utils,browseURL)
 importFrom(utils,combn)
