--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,10 +16,11 @@ Imports:
     jsonlite,
     magrittr,
     quanteda,
-    tibble
+    tibble,
+    whoami
 Remotes:
     ropensci/ghql
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1
+RoxygenNote: 6.0.1.9000
