--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,10 @@ Authors@R: c(
         comment = c(ORCID = "0000-0003-2172-5265")),
     person("Maëlle", "Salmon", role="aut"),
     person("Bob", "Rudis", role="aut"),
-    person("Jonathan", "Carroll", role="aut"))
+    person("Jonathan", "Carroll", 
+       email = "rpkg@jcarroll.com.au", 
+       role = "aut", 
+       comment = c(ORCID = "0000-0002-1404-5264")))
 Description: Command line text search of github stars for yourself or anybody
     else.
 Imports:
@@ -22,4 +25,4 @@ Remotes:
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1
+RoxygenNote: 6.0.1.9000
