--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,17 @@ matrix:
         - os: linux
           r: devel
           dist: trusty
-          #- os: osx
-          #r: release
+        - os: linux
+          r: oldrel
+          dist: trusty
+        - os: osx
+          r: release
+          before_install: ''
+          disable_homebrew: true
           #- os: osx
           #r: devel
+          #before_install: ''
+          #disable_homebrew: true
 
 r_github_packages:
       - jimhester/covr
